--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -1,9 +1,5 @@
-@layer base;
-
-@import "@radix-ui/themes/styles.css" layer(base);
+@import "@radix-ui/themes/styles.css";
 
 :root {
   --font-sans: "Inter", sans-serif;
-  --primary-color: #000;
-  --secondary-color: #f00;
 }
