--- a/apps/quest4Kids/src/components/layouts/header/header.module.css
+++ b/apps/quest4Kids/src/components/layouts/header/header.module.css
@@ -1,4 +1,8 @@
 .header {
   border-bottom: 1px solid var(--gray-a5);
   background-color: var(--bg-header);
+  position: sticky;
+  height: var(--header-height);
+  top: 0;
+  z-index: 2;
 }
