--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -1,4 +1,4 @@
-@import "@radix-ui/themes/styles.css";
+/* @import "@radix-ui/themes/styles.css"; */
 
 :root {
   --font-sans: "Inter", sans-serif;
