--- a/packages/ui/src/components/inlineEdit/inlineEdit.module.css
+++ b/packages/ui/src/components/inlineEdit/inlineEdit.module.css
@@ -14,7 +14,7 @@
   &:hover {
     transition: all 0.2s ease-out;
     cursor: text;
-    box-shadow: inset 0 0 0 var(--text-field-border-width) var(--gray-a7);
+    box-shadow: inset 0 0 0 1px var(--gray-a7);
     border-radius: 7px;
     background-color: var(--gray-a3);
     .iconHolder {
