--- a/packages/ui/src/components/inlineEdit/inlineEdit.module.css
+++ b/packages/ui/src/components/inlineEdit/inlineEdit.module.css
@@ -12,7 +12,9 @@
   }
 
   &:hover {
-    transition: all 0.2s ease-out;
+    transition:
+      background-color 0.2s ease-out,
+      box-shadow 0.2s ease-out;
     cursor: text;
     box-shadow: inset 0 0 0 1px var(--gray-a7);
     border-radius: 7px;
