--- a/packages/uiTw/src/styles/default.css
+++ b/packages/uiTw/src/styles/default.css
@@ -55,6 +55,8 @@
   /* Header */
   --header: var(--violet-11);
   --header-foreground: oklch(1 0 0);
+	/* Select */
+  --accent: oklch(0.97 0 0);
 }
 
 .dark {
@@ -107,6 +109,8 @@
   /* Header */
   --header: #1f172c;
   --header-foreground: oklch(1 0 0);
+	/* Select */
+  --accent: oklch(0.269 0 0);
 }
 
 @theme inline {
@@ -163,6 +167,9 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+	/* Select */
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
 }
 
 @layer base {
