--- a/packages/uiTw/src/styles/default.css
+++ b/packages/uiTw/src/styles/default.css
@@ -76,7 +76,7 @@
 
   --accent-foreground: oklch(0.985 0 0);
 
-  --destructive: #0f0;
+  --destructive: #f00;
   --background: #1f172c;
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
